<resources>
    <string name="app_name">NZIHL</string>
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_scores">Scores</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_stats">Stats</string>
    <string name="title_more">More</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
<<<<<<< HEAD
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
=======
    <string name="title_scores">Scores</string>
    <string name="article_image">Article Image</string>
    <string name="textview">TextView</string>
<<<<<<< HEAD
    <string name="change_font_size">Change Font Size</string>
    <string name="share_button">Share Button</string>
=======
>>>>>>> 8be5833cf17623b0cf57470624d325d85c00a1e6
>>>>>>> e7ede2849775e8d89937b64dec9b873ddc59c5db
</resources>
