<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/navigation_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/navigation_news"
        android:title="@string/menu_news"
        android:icon="@drawable/ic_library_books_black_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/navigation_scores"
        android:title="@string/menu_scores"
        android:icon="@drawable/ic_scores_black"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/navigation_stats"
        android:title="@string/menu_stats"
        android:icon="@drawable/ic_stats_black_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/navigation_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_more_black_24dp"
        app:showAsAction="ifRoom"/>
</menu>
